--- a/7-web-film-pake-api/src/App.css
+++ b/7-web-film-pake-api/src/App.css
@@ -1,7 +1,4 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -64,4 +61,14 @@
   margin-bottom: 24px;
   font-weight: bold;
   color: red;
+}
+
+.footer {
+  margin-top: 20px;
+  background-color: #333;
+  color: white; 
+  padding: 20px;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
 }
